src/kubernetes/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${ProjectName}
  namespace: ${Environment}
  labels:
    app: ${ProjectName}
    app.kubernetes.io/name: ${ProjectName}
    app.kubernetes.io/version: "${Version}"
    app.kubernetes.io/managed-by: Kaptain
    app.kubernetes.io/part-of: ${ProductName}
    kaptain.org/environment: ${Environment}
    kaptain.org/product: ${ProductName}
    kaptain.org/project-name: ${ProjectName}
    kaptain.org/version: "${Version}"
    kaptain.org/owner: kube-kaptain
  annotations:
    kaptain.org/source-repository: kube-kaptain/vendor-envoy-gateway-proxy
    kaptain.org/generated-by: Hand-authored
spec:
  gatewayClassName: ${VendorEnvoyGatewayProxy/GatewayClassName}
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: ${ProjectName}
  listeners:
    - name: ${VendorEnvoyGatewayProxy/ListenerName}
      protocol: ${VendorEnvoyGatewayProxy/ListenerProtocol}
      port: ${VendorEnvoyGatewayProxy/ListenerPort}
      tls:
        certificateRefs:
          - name: ${VendorEnvoyGatewayProxy/ListenerTlsCertificateName}
            namespace: ${Environment}
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values: [${VendorEnvoyGatewayProxy/ListenerAllowedRoutesNamespaces}]
